--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ docker.enabled = true
 cloud.autoscale.enabled = true
       
 process {
-  cpus = 15
+  cpus = 2
   executor = 'ignite'
 }
 
@@ -17,8 +17,8 @@ params {
   phenoFile = false
   phenoCol = false
   qFilter = '0.005:minor'
-  thres_m = '1e-5'
-  thres_HWE = '1e-5'
+  thres_m = 0.00001
+  thres_HWE = 0.000001
   plink_keep_pheno = "s3://lifebit-featured-datasets/projects/gel/gel-gwas/testdata/nodata"
   sampleIDColinphenoFile = 'IID'
   traitType = 'binary'
