--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
   plinkFile = false
   phenoFile = false
   phenoCol = false
+  sampleFile = false
   qFilter = '0.005:minor'
   thres_m = 0.00001
   thres_HWE = 0.000001
