--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@ process {
 
 params {
   skip_report = true
+  skip_masking = true
   plink_set_missing_var_ids = '@:#_\\\$r_\\\$a'
   plink_output_chr = 'chrM'
   plink_new_id_max_allele_len = 1000
