--- a/nextflow.config
+++ b/nextflow.config
@@ -40,7 +40,10 @@ process {
   withName: gwas_1_fit_null_glmm {
     container = 'wzhou88/saige:0.39'
   }
-  withName: gwas_2_spa_tests {
+  withName: gwas_2_spa_tests_vcf {
+    container = 'wzhou88/saige:0.39'
+  }
+  withName: gwas_2_spa_tests_bgen {
     container = 'wzhou88/saige:0.39'
   }
 }
