--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,7 @@ params {
   output_tag = 'covid_1'
   top_n_sites = 200
   max_top_n_sites = 1000
-  saige_filename_pattern = '.SAIGE.gwas.out.txt'
+  saige_filename_pattern = '.SAIGE.gwas.txt'
 }
 
 process {
