--- a/nextflow.config
+++ b/nextflow.config
@@ -35,7 +35,7 @@ params {
 }
 
 process {
-    container = 'quay.io/lifebitai/gelgwas:1.0dev'
+    container = 'lifebitai/gelgwas:1.0dev'
 
   withName: gwas_1_fit_null_glmm {
     container = 'wzhou88/saige:0.39'
