--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,7 @@ process {
 params {
   skip_report = true
   skip_masking = true
+  skip_bgen_creation = true
   gwas_2_spa_tests_format_switch = true
   plink_set_missing_var_ids = '@:#_\\\$r_\\\$a'
   plink_output_chr = 'chrM'
