--- a/nextflow.config
+++ b/nextflow.config
@@ -7,9 +7,10 @@ process {
 }
 
 params {
-  skip_report = true
   skip_masking = true
+  skip_gwas_filtering = true
   skip_bgen_creation = true
+  skip_report = true
   gwas_2_spa_tests_format_switch = true
   plink_set_missing_var_ids = '@:#_\\\$r_\\\$a'
   plink_output_chr = 'chrM'
@@ -40,6 +41,9 @@ process {
 
   withName: gwas_1_fit_null_glmm {
     container = 'wzhou88/saige:0.39'
+  }
+  withName: bgen_creation {
+    container = 'quay.io/lifebitai/bgenix'
   }
   withName: gwas_2_spa_tests_vcf {
     container = 'wzhou88/saige:0.39'
