--- a/nextflow.config
+++ b/nextflow.config
@@ -43,7 +43,7 @@ process {
     container = 'wzhou88/saige:0.39'
   }
   withName: bgen_creation {
-    container = 'quay.io/lifebitai/bgenix'
+    container = 'lifebitai/bgenix'
   }
   withName: gwas_2_spa_tests_vcf {
     container = 'wzhou88/saige:0.39'
