--- a/nextflow.config
+++ b/nextflow.config
@@ -42,6 +42,9 @@ process {
   withName: gwas_1_fit_null_glmm {
     container = 'wzhou88/saige:0.39'
   }
+   withName: bgen_creation {
+    container = 'lifebitai/bgenix'
+  } 
   withName: gwas_2_spa_tests_vcf {
     container = 'wzhou88/saige:0.39'
   }
