--- a/nextflow.config
+++ b/nextflow.config
@@ -47,6 +47,6 @@ process {
   }
   withName: gwas_2_spa_tests_bgen {
     container = 'wzhou88/saige:0.39'
-    disk = "2000 GB"
+    disk = "1 MB"
   }
 }
