--- a/nextflow.config
+++ b/nextflow.config
@@ -39,13 +39,17 @@ params {
 
 process {
     container = 'lifebitai/gelgwas:1.0dev'
-
+    
+  withName: gwas_1_fit_null_glmm_nullplink {
+    container = 'wzhou88/saige:0.39'
+  }
   withName: gwas_1_fit_null_glmm {
     container = 'wzhou88/saige:0.39'
   }
   withName: gwas_2_spa_tests_vcf {
     container = 'wzhou88/saige:0.39'
   }
+  gwas_1_fit_null_glmm_nullplink
   withName: gwas_2_spa_tests_bgen {
     container = 'wzhou88/saige:0.39'
   }
