--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ params {
   skip_bgen_creation = true
   skip_report = true
   gwas_2_spa_tests_format_switch = true
-  plink_set_missing_var_ids = '@:#_\\$r_\\$a'
+  plink_set_missing_var_ids = '@:#_\$r_\$a'
   plink_output_chr = 'chrM'
   plink_new_id_max_allele_len = 1000
   plink_vcf_half_call = 'm'
