--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ cloud.autoscale.enabled = true
       
 process {
   cpus = 2
-  executor = 'awsbatch'
+  executor = 'ignite'
   region = 'eu-west-2'
 }
 
