filter on ac and remove more intermediate files

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,8 @@ params {
   phenoFile = false
   phenoCol = false
   sampleFile = false
-  qFilter = '0.005:minor'
+  qFilter = '0.001:minor'
+  acFilter = '1:minor'
   thres_m = 0.00001
   thres_HWE = 0.000001
   plink_keep_pheno = "s3://lifebit-featured-datasets/projects/gel/gel-gwas/testdata/nodata"
