--- a/nextflow.config
+++ b/nextflow.config
@@ -39,18 +39,18 @@ params {
 }
 
 process {
-    container = 'quay.io/lifebitai/gelgwas'
+    container = 'lifebitai/gelgwas:1.0dev'
 
   withName: gwas_1_fit_null_glmm {
-    container = 'quay.io/lifebitai/saige:0.39.0'
+    container = 'wzhou88/saige:0.39'
   }
   withName: bgen_creation {
     container = 'quay.io/lifebitai/bgenix'
   }  
   withName: gwas_2_spa_tests_vcf {
-    container = 'quay.io/lifebitai/saige:0.39.0'
+    container = 'wzhou88/saige:0.39'
   }
   withName: gwas_2_spa_tests_bgen {
-    container = 'quay.io/lifebitai/saige:0.39.0'
+    container = 'wzhou88/saige:0.39'
   }
 }
