--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ process {
   cpus = 2
   executor = 'ignite'
   errorStrategy = 'ignore'
+  containerOptions = '-v /etc/ssl:/etc/ssl -v /usr/local/share/ca-certificates:/usr/local/share/ca-certificates'
 }
 
 params {
