--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@ process {
   executor = 'ignite'
   errorStrategy = 'ignore'
   containerOptions = '-v /etc/ssl:/etc/ssl -v /usr/local/share/ca-certificates:/usr/local/share/ca-certificates'
+  maxForks = 5000
 }
 
 params {
