--- a/nextflow.config
+++ b/nextflow.config
@@ -7,6 +7,7 @@ process {
   errorStrategy = 'ignore'
   containerOptions = '-v /etc/ssl:/etc/ssl -v /usr/local/share/ca-certificates:/usr/local/share/ca-certificates'
   maxForks = 5000
+  queueSize = 5000
 }
 
 params {
