--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,8 @@ cloud.autoscale.enabled = true
 process {
   cpus = 2
   executor = 'ignite'
-  errorStrategy = 'ignore'
+  maxForks = 5000
+  queueSize = 5000
 }
 
 params {
