Updates errorStrategy to terminate

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,7 @@ cloud.autoscale.enabled = true
 process {
   cpus = 2
   executor = 'ignite'
-  errorStrategy = 'ignore'
+  errorStrategy = 'terminate'
   containerOptions = '-v /etc/ssl:/etc/ssl -v /usr/local/share/ca-certificates:/usr/local/share/ca-certificates'
   maxForks = 5000
   queueSize = 5000
