add time limit to processes being launched

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,8 +4,12 @@ cloud.autoscale.enabled = true
 process {
   cpus = 2
   executor = 'ignite'
-  maxForks = 100
-  queueSize = 5000
+  maxForks = 1000
+  queueSize = 1000
+}
+
+executor {
+submitRateLimit = '5 sec'
 }
 
 params {
