add aws.region = 'eu-west-2'

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,10 @@
 docker.enabled = true
-cloud.autoscale.enabled = false
+cloud.autoscale.enabled = true
       
 process {
   cpus = 2
   executor = 'ignite'
+  aws.region = 'eu-west-2'
 }
 
 
