--- a/nextflow.config
+++ b/nextflow.config
@@ -2,8 +2,9 @@ docker.enabled = true
 cloud.autoscale.enabled = true
       
 process {
-  cpus = 2
   executor = 'ignite'
+  cpus = 2
+  queueSize = 200
 }
 
 
