put queuesize withinin executor scope

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,9 +4,10 @@ cloud.autoscale.enabled = true
 process {
   executor = 'ignite'
   cpus = 2
-  queueSize = 200
 }
-
+executor {
+queueSize = 200
+}
 
 params {
   skip_masking = true
