Exposes exec and queue

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,4 @@
 docker.enabled = true
-      
-process {
-  cpus = 2
-  executor = 'awsbatch'
-}
-
 
 params {
   skip_masking = true
@@ -35,10 +29,17 @@ params {
   top_n_sites = 200
   max_top_n_sites = 1000
   saige_filename_pattern = '.SAIGE.gwas.txt'
+  executor = 'awsbatch'
+  queueSize = 1000
 }
 
+
 process {
-    container = 'quay.io/lifebitai/gelgwas:1.0dev'
+  cpus = 2
+  executor = params.executor
+  queueSize = params.queueSize
+  
+  container = 'quay.io/lifebitai/gelgwas:1.0dev'
 
   withName: gwas_1_fit_null_glmm {
     container = 'quay.io/lifebitai/saige:0.39.0'
