Exposes as params.errorStrategy

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,6 +31,7 @@ params {
   saige_filename_pattern = '.SAIGE.gwas.txt'
   executor = 'awsbatch'
   queueSize = 1000
+  errorStrategy = 'ignore'
 }
 
 
@@ -38,6 +39,7 @@ process {
   cpus = 2
   executor = params.executor
   queueSize = params.queueSize
+  errorStrategy = params.errorStrategy
   
   container = 'quay.io/lifebitai/gelgwas:1.0dev'
 
