--- a/nextflow.config
+++ b/nextflow.config
@@ -30,15 +30,17 @@ params {
   max_top_n_sites = 1000
   saige_filename_pattern = '.SAIGE.gwas.txt'
   executor = 'awsbatch'
-  queueSize = 1000
+  queueSize = 200
   errorStrategy = 'ignore'
 }
 
+executor {
+  executor = params.executor
+  queueSize = params.queueSize
+}
 
 process {
   cpus = 2
-  executor = params.executor
-  queueSize = params.queueSize
   errorStrategy = params.errorStrategy
   
   container = 'quay.io/lifebitai/gelgwas:1.0dev'
