expose queue size

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,13 +3,15 @@ cloud.autoscale.enabled = true
       
 process {
   executor = 'ignite'
-  cpus = 2
+  cpus = params
 }
+
 executor {
-queueSize = 200
+queueSize = params.queueSize
 }
 
 params {
+  queueSize = 200
   skip_masking = true
   skip_gwas_filtering = true
   skip_bgen_creation = true
