--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ cloud.autoscale.enabled = true
       
 process {
   executor = 'ignite'
-  cpus = params
+  cpus = params.cpus
 }
 
 executor {
@@ -11,6 +11,7 @@ queueSize = 500
 }
 
 params {
+  cpus=2
   skip_masking = true
   skip_gwas_filtering = true
   skip_bgen_creation = true
