test for exposing parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ cloud.autoscale.enabled = true
       
 process {
   executor = 'ignite'
-  cpus = 4
+  cpus = params.cpus
 }
 
 executor {
@@ -39,6 +39,7 @@ params {
   top_n_sites = 200
   max_top_n_sites = 1000
   saige_filename_pattern = '.SAIGE.gwas.txt'
+  cpus = 2
 }
 
 process {
