move params.cpus after the params definition

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,6 @@ cloud.autoscale.enabled = true
       
 process {
   executor = 'ignite'
-  cpus = params.cpus
 }
 
 executor {
@@ -40,6 +39,11 @@ params {
   max_top_n_sites = 1000
   saige_filename_pattern = '.SAIGE.gwas.txt'
   cpus = 2
+}
+
+process {
+  executor = 'ignite'
+  cpus = params.cpus
 }
 
 process {
