Changes to gel-gwas pipeline: 1.	Change of container bgenix_plus 2.	Exposure of cpus as parameter 3.	Wait end of masking

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ cloud.autoscale.enabled = true
       
 process {
   executor = 'ignite'
-  cpus = 4
+  cpus = params.cpus
 }
 
 executor {
@@ -39,17 +39,15 @@ params {
   top_n_sites = 200
   max_top_n_sites = 1000
   saige_filename_pattern = '.SAIGE.gwas.txt'
+  cpus=2
 }
 
 process {
-    container = 'quay.io/lifebitai/gelgwas:1.0dev'
+    container = 'quay.io/lifebitai/bgenix-plus'
 
   withName: gwas_1_fit_null_glmm {
     container = 'quay.io/lifebitai/saige:0.39.0'
   }
-  withName: bgen_creation {
-    container = 'quay.io/lifebitai/bgenix'
-  }  
   withName: gwas_2_spa_tests_vcf {
     container = 'quay.io/lifebitai/saige:0.39.0'
   }
