container change for create_report

--- a/nextflow.config
+++ b/nextflow.config
@@ -54,4 +54,7 @@ process {
   withName: gwas_2_spa_tests_bgen {
     container = 'quay.io/lifebitai/saige:0.39.0'
   }
+  withName: create_report {
+  container = 'quay.io/lifebitai/gelgwas:1.0dev'
+  }
 }
